[gd_scene load_steps=9 format=3 uid="uid://bwdn54c76i27w"]

[ext_resource type="Script" path="res://components/vocabulary/word_bubble.gd" id="1_au6et"]
[ext_resource type="FontFile" uid="uid://ch3lmpth87fad" path="res://assets/fonts/Dosis/static/Dosis-Regular.ttf" id="2_dexll"]
[ext_resource type="Texture2D" uid="uid://bs5hljerxh0k5" path="res://assets/gui/buttons/vocabulary_marker.svg" id="3_3spw1"]
[ext_resource type="AudioStream" uid="uid://cwdvje6x681na" path="res://assets/audio/ui/beep.wav" id="3_svgd0"]
[ext_resource type="Texture2D" uid="uid://d24d4topiu1gy" path="res://assets/gui/dialogue/play.svg" id="5_6n427"]
[ext_resource type="Texture2D" uid="uid://dwjq5ikwsmx7h" path="res://assets/gui/dialogue/play_pressed.svg" id="6_sqkhp"]
[ext_resource type="Texture2D" uid="uid://beb6xpnyu6e6p" path="res://assets/gui/dialogue/play_hover.svg" id="7_wlgbm"]

[sub_resource type="CanvasTexture" id="CanvasTexture_2ur4m"]

[node name="Word" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_au6et")

[node name="balloon_margin_container" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 220.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="bubble" type="TextureRect" parent="balloon_margin_container"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = SubResource("CanvasTexture_2ur4m")

[node name="balloon_vbox" type="VBoxContainer" parent="balloon_margin_container/bubble"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
offset_right = 480.0
offset_bottom = 200.0
alignment = 1

[node name="lug" type="Label" parent="balloon_margin_container/bubble/balloon_vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dexll")
theme_override_font_sizes/font_size = 32
text = "Learning"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="eng" type="Label" parent="balloon_margin_container/bubble/balloon_vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dexll")
theme_override_font_sizes/font_size = 24
text = "Reference"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="vocab_voice" type="AudioStreamPlayer" parent="balloon_margin_container/bubble/balloon_vbox"]
unique_name_in_owner = true
stream = ExtResource("3_svgd0")

[node name="Control" type="Control" parent="balloon_margin_container"]
layout_mode = 2

[node name="show_bubble" type="Button" parent="balloon_margin_container/Control"]
layout_mode = 2
offset_left = 179.0
offset_top = 172.0
offset_right = 659.0
offset_bottom = 480.0
scale = Vector2(0.25, 0.25)
icon = ExtResource("3_3spw1")
flat = true
icon_alignment = 1

[node name="play_vocab_btn" type="TextureButton" parent="balloon_margin_container/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
offset_left = 219.0
offset_top = -20.0
offset_right = 761.0
offset_bottom = 522.0
scale = Vector2(0.075, 0.075)
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Play"
texture_normal = ExtResource("5_6n427")
texture_pressed = ExtResource("6_sqkhp")
texture_hover = ExtResource("7_wlgbm")

[connection signal="pressed" from="balloon_margin_container/Control/show_bubble" to="." method="_on_show_bubble_pressed"]
[connection signal="pressed" from="balloon_margin_container/Control/play_vocab_btn" to="." method="_on_play_vocab_btn_pressed"]
